--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=dictionary
 spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:dictionary
@@ -9,3 +9,4 @@ spring.datasource.url=jdbc:h2:mem:dictionary
 #spring.jpa.hibernate.ddl-auto=none
 
 # Internationalization
+server.servlet.context-path=/dictionary
